--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,19 @@
 [versions]
 agp = "8.12.0-alpha03"
-kotlin = "2.0.21"
-playServicesWearable = "18.0.0"
+kotlin = "2.1.21"
+okhttp = "4.12.0"
+coreKtx = "1.16.0"
+appcompat = "1.7.1"
+material = "1.12.0"
 
 [libraries]
-play-services-wearable = { group = "com.google.android.gms", name = "play-services-wearable", version.ref = "playServicesWearable" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+android-library = { id = "com.android.library", version.ref = "agp" }
 
